# insanity

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.mingw  README.md  create-release.sh  create_release.sh  flake.nix  shell.nix
.cargo/: config.toml
.github/workflows/: build.yml  linux-gnu.yml  linux-musl.yml  linux.yml  macos-apple-silicon.yaml  macos-x86.yaml  macos.yaml  windows-mingw.yml  windows-msvc.yml  windows.yml
insanity-core/: Cargo.toml
insanity-core/src/: audio_source.rs  lib.rs  loudness.rs  user_input_event.rs
insanity-native-tui-app/: Cargo.toml
insanity-native-tui-app/src/: clerver.rs  client.rs  connection_manager.rs  lib.rs  main.rs  managed_peer.rs  processor.rs  realtime_buffer.rs  resampler.rs  room_handler.rs  server.rs  update.rs
insanity-tui/: Cargo.toml
insanity-tui-adapter/: Cargo.toml
insanity-tui-adapter/src/: editor.rs  lib.rs  main.rs  render.rs
insanity-tui/src/: editor.rs  lib.rs  main.rs  render.rs
insanity-web-app/: index.html  package-lock.json  package.json  tailwind.config.js
rubato-audio-source/: Cargo.toml
rubato-audio-source/src/: lib.rs
src/: clerver.rs  client.rs  connection_manager.rs  coordinator.rs  lib.rs  main.rs  managed_peer.rs  processor.rs  protocol.rs  realtime_buffer.rs  resampler.rs  room_handler.rs  server.rs  session.rs  tui.rs
