[package]
name = "insanity"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
base64 = "0.13.0"
base65536 = "1.0.1"
bincode = "1.3.3"
clap = "3.0.14"
cpal = "0.13.4"
crossbeam = "0.8"
nnnoiseless = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
itertools = "0.10.1"
zstd = "0.10"
crossterm = "0.23.0"
tokio = { version = "1", features = ["full"] }
opus = "0.2.1"
tui = { version = "0.17", default-features = false, features = ["crossterm"] }
nanoid = "0.4.0"
futures-util = "0.3.17"
send_safe = { git = "https://github.com/nicolaschan/send_safe.git" }
libtor = { version = "46.6.0", features = ["vendored-openssl"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dirs = "4.0.0"
warp = "0.3.1"
stunclient = "0.3"
reqwest = { version = "0.11", features = ["socks", "json"] }
serde_json = "1.0.67"
veq = { git = "https://github.com/nicolaschan/udpp.git" }
rubato = "0.10.1"