[package]
name = "insanity"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bincode = "1.3.3"
clap = {version = "^4.5.3", features = ["derive"]}
cpal = "0.13.5"
nnnoiseless = "=0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
opus = "0.3.0"
# futures-util = "0.3.30"
send_safe = { git = "https://github.com/nicolaschan/send_safe.git" }
uuid = { version = "1.7", features = ["serde", "v4"] }
dirs = "5.0.1"
serde_json = "1.0.114"
rubato = "0.10"
insanity-tui = { path = "insanity-tui" }
sha2 = "0.10.8"
whoami = "1.5.1"
sled = "0.34.7"
log = "0.4"
fern = "0.6.2"
chrono = "0.4"
veq = { git = "https://github.com/nicolaschan/udpp.git" }
baybridge = { git = "https://github.com/nicolaschan/baybridge.git" }
# veq = { path = "../udpp" }
# arti-client = { version = "0.14.1", features = ["onion-service-service", "onion-service-client", "static"] }
# tor-rtcompat = "0.10.0"
# tor-config = "0.11.0"
# tor-hsservice = "0.8.0"
# hyper-util = { version = "0.1.3", features = ["tokio"] }
# hyper = { version = "1.2.0", features = ["http1", "client", "server"] }
# http-body-util = "0.1.1"
# futures = "0.3.30"
# tor-proto = "0.16.1"
# tor-cell = "0.16.1"
# http = "1.1.0"
itertools = "0.12.1"
# iroh = "0.13.0"
anyhow = "1.0.82"
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
# indicatif = "0.17.8"
quic-rpc = "0.7.0"
# base64 = "0.22.0"
