[package]
name = "insanity-tui-adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "insanity_tui_adapter"
path = "src/lib.rs"

[[bin]]
name = "insanity-tui-adapter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
tokio = { version = "1.16.1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tui = "0.17.0"
textwrap = "0.15.0"

[build-dependencies]
built = { version = "0.7.4", features = ["chrono", "git2"] }
