[package]
name = "insanity-tui-adapter"
version = "1.6.2"
edition = "2024"

[lib]
name = "insanity_tui_adapter"
path = "src/lib.rs"

[[bin]]
name = "insanity-tui-adapter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insanity-core = { path = "../insanity-core" }
crossterm = "0.23"
tokio = { version = "1.16.1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tui = "0.17.0"
textwrap = "0.15.0"

[build-dependencies]
built = { version = "0.7.4", features = ["chrono", "git2"] }
